--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ env_logger = { version = "0.9.0", default-features = false }
 
 # for the lp feature
 coin_cbc = { version = "0.1.6", optional = true }
+rand = { version = "0.8.5", optional = true }
 
 # for the serde-1 feature
 serde = { version = "1.0.137", features = ["derive"], optional = true }
