--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,12 @@ instant = "0.1.12"
 fxhash = "0.2.1"
 hashbrown = "0.12.1"
 thiserror = "1.0.31"
+rand = "0.8.5"
 symbol_table = { version = "0.2.0", features = ["global"] }
 env_logger = { version = "0.9.0", default-features = false }
 
 # for the lp feature
 coin_cbc = { version = "0.1.6", optional = true }
-rand = { version = "0.8.5", optional = true }
 
 # for the serde-1 feature
 serde = { version = "1.0.137", features = ["derive"], optional = true }
