--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ fxhash = "0.2.1"
 hashbrown = "0.12.1"
 thiserror = "1.0.31"
 rand = "0.8.5"
+rplex = {version = "0.2", git = "https://github.com/gussmith23/rplex.git"} 
 symbol_table = { version = "0.2.0", features = ["global"] }
 env_logger = { version = "0.9.0", default-features = false }
 
